examples/test/testpolicy5768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5768
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key10: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value3
          key48: value22
      podSelector:
        matchLabels:
          key19: value14
          key18: value38
          key4: value11
